[gd_scene load_steps=9 format=2]

[ext_resource path="res://idle 6 frames.tres" type="Animation" id=1]
[ext_resource path="res://NPC/freira.png" type="Texture" id=2]
[ext_resource path="res://NPC/freira.gd" type="Script" id=3]
[ext_resource path="res://UI/music notes.png" type="Texture" id=4]
[ext_resource path="res://Music and Sounds/humming.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.1, 1.2, 1.3, 2.4, 3.7, 4.1, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 1, 6, 7, 9, 5 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle 4 frames"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.67968, 4.27632 )

[node name="freira" type="StaticBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 1 )
"anims/idle 4 frames" = SubResource( 2 )
"anims/idle 6 frames" = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -1.90735e-06 )
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 3 )

[node name="QuestionMark" type="Sprite" parent="."]
position = Vector2( 9.24748, -15.1874 )
texture = ExtResource( 4 )
offset = Vector2( -9.24748, -7.13882 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = 10.0
autoplay = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
